force-app/main/default/objects/ABML_Case_Detail__c/ABML_Case_Detail__c.object-meta.xml
<CustomObject>
    <label>ABML Case Detail</label>
    <nameField>
        <displayFormat>ABML-{0000000}</displayFormat>
        <label>ABML Case Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABML Case Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>