force-app/main/default/objects/ABML_Case_Detail__c/fields/ABC_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>ABC_Cust_ID__c</fullName>
    <label>ABC Cust ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>