force-app/main/default/objects/ABML_Case_Detail__c/fields/ABML_SubSource__c.field-meta.xml
<CustomField>
    <fullName>ABML_SubSource__c</fullName>
    <label>SubSource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Franchisee</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>HO</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>SEBI</fullName>
            </value>
            <value>
                <fullName>ABC Portal</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>ONE ABC</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Social Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>