force-app/main/default/objects/ABML_Case_Detail__c/fields/Ageing_Outside_TAT__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Outside_TAT__c</fullName>
    <label>Ageing Outside TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>