force-app/main/default/objects/ABML_Case_Detail__c/fields/Assigned_On__c.field-meta.xml
<CustomField>
    <fullName>Assigned_On__c</fullName>
    <label>Assigned On</label>
    <type>DateTime</type>
</CustomField>