force-app/main/default/objects/ABML_Case_Detail__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ABML_Case_Details</relationshipName>
    <type>Lookup</type>
</CustomField>