force-app/main/default/objects/ABML_Case_Detail__c/fields/AssignedOn_Team__c.field-meta.xml
<CustomField>
    <fullName>AssignedOn_Team__c</fullName>
    <label>AssignedOn Team</label>
    <type>DateTime</type>
</CustomField>