force-app/main/default/objects/ABML_Case_Detail__c/fields/Auto_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assignment__c</fullName>
    <label>Auto Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>