force-app/main/default/objects/ABML_Case_Detail__c/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case Category</label>
    <referenceTo>ASF_Case_Category_Config__c</referenceTo>
    <relationshipLabel>ABML Case Details</relationshipLabel>
    <relationshipName>ABML_Case_Details</relationshipName>
    <type>Lookup</type>
</CustomField>