force-app/main/default/objects/ABML_Case_Detail__c/fields/Cause_of_Complaint_R__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Complaint_R__c</fullName>
    <label>Cause of Complaint/R</label>
    <length>255</length>
    <type>Text</type>
</CustomField>