force-app/main/default/objects/ABML_Case_Detail__c/fields/Cust_Service_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Cust_Service_Remarks__c</fullName>
    <label>Cust Service Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>