force-app/main/default/objects/ABML_Case_Detail__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <label>Dealer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>