force-app/main/default/objects/ABML_Case_Detail__c/fields/Department_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Department_Remarks__c</fullName>
    <label>Department Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>