force-app/main/default/objects/ABML_Case_Detail__c/fields/Escalation_Number__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Number__c</fullName>
    <label>Escalation Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>