force-app/main/default/objects/ABML_Case_Detail__c/fields/In_Manual__c.field-meta.xml
<CustomField>
    <fullName>In_Manual__c</fullName>
    <label>In Manual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>