force-app/main/default/objects/ABML_Case_Detail__c/fields/Is_TAT_3_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Is_TAT_3_Escalated__c</fullName>
    <label>Is TAT 3 Escalated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>