force-app/main/default/objects/ABML_Case_Detail__c/fields/MICR__c.field-meta.xml
<CustomField>
    <fullName>MICR__c</fullName>
    <label>MICR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>