force-app/main/default/objects/ABML_Case_Detail__c/fields/Mode_of_Reply__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Reply__c</fullName>
    <label>Mode of Reply</label>
    <length>255</length>
    <type>Text</type>
</CustomField>