force-app/main/default/objects/ABML_Case_Detail__c/fields/Modified_On__c.field-meta.xml
<CustomField>
    <fullName>Modified_On__c</fullName>
    <label>Modified On</label>
    <type>DateTime</type>
</CustomField>