force-app/main/default/objects/ABML_Case_Detail__c/fields/One_ABC_Comments__c.field-meta.xml
<CustomField>
    <fullName>One_ABC_Comments__c</fullName>
    <label>One ABC Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>