force-app/main/default/objects/ABML_Case_Detail__c/fields/One_ABC_Owner__c.field-meta.xml
<CustomField>
    <fullName>One_ABC_Owner__c</fullName>
    <label>One ABC Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>