force-app/main/default/objects/ABML_Case_Detail__c/fields/OneABC_Customer_TA__c.field-meta.xml
<CustomField>
    <fullName>OneABC_Customer_TA__c</fullName>
    <label>OneABC Customer TA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>