force-app/main/default/objects/ABML_Case_Detail__c/fields/Regarding_Customer__c.field-meta.xml
<CustomField>
    <fullName>Regarding_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regarding Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ABML Case Details (Regarding Customer)</relationshipLabel>
    <relationshipName>ABML_Case_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>