force-app/main/default/objects/ABML_Case_Detail__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Commodity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>