force-app/main/default/objects/ABML_Case_Detail__c/fields/Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Notification__c</fullName>
    <label>Send Notification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>