force-app/main/default/objects/ABML_Case_Detail__c/fields/Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Social_Media__c</fullName>
    <label>Social Media</label>
    <type>TextArea</type>
</CustomField>