force-app/main/default/objects/ABML_Case_Detail__c/fields/TAT_Days__c.field-meta.xml
<CustomField>
    <fullName>TAT_Days__c</fullName>
    <label>TAT Days</label>
    <length>100</length>
    <type>Text</type>
</CustomField>