force-app/main/default/objects/ABML_Case_Detail__c/fields/TAT_Deadline__c.field-meta.xml
<CustomField>
    <fullName>TAT_Deadline__c</fullName>
    <label>TAT Deadline</label>
    <type>DateTime</type>
</CustomField>