force-app/main/default/objects/ABML_Case_Detail__c/fields/TAT_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>TAT_Deadline_Date__c</fullName>
    <label>TAT (Deadline Date)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>