force-app/main/default/objects/ABML_Case_Detail__c/fields/TAT_L2_Date__c.field-meta.xml
<CustomField>
    <fullName>TAT_L2_Date__c</fullName>
    <label>TAT L2 Date</label>
    <type>DateTime</type>
</CustomField>