force-app/main/default/objects/ABML_Case_Detail__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <label>To Date</label>
    <type>DateTime</type>
</CustomField>