force-app/main/default/objects/ABML_Case_Detail__c/fields/Value_of_Claim__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Claim__c</fullName>
    <label>Value of Claim</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>